Glide autoplay set up and gallery media queries

--- a/index.html
+++ b/index.html
@@ -356,7 +356,8 @@
             </div>
             <a class="btn-order" href="#">Tellima</a>
             <p class="order-info">
-              Hinnale võib lisanduda transpordikulu. Lisainfo: KKK
+              Hinnale võib lisanduda transpordikulu. Lisainfo:
+              <a class="kkk" href="#kkk">KKK</a>
             </p>
           </div>
         </div>
