Last CSS touches

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="header outer-container bg-primary">
       <div class="max-width-container">
-        <img src="logo1.svg" class="logo" alt="Laptap logo" />
+        <a href="#"><img src="logo1.svg" class="logo" alt="Laptap logo" /></a>
         <nav class="nav">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -356,8 +356,11 @@
             </div>
             <a class="btn-order" href="#">Tellima</a>
             <p class="order-info">
-              Hinnale võib lisanduda transpordikulu. Lisainfo:
-              <a class="kkk" href="#kkk">KKK</a>
+              Hinnale võib lisanduda transpordikulu. Lisainfo:&nbsp;<a
+                class="kkk"
+                href="#kkk"
+                >KKK</a
+              >
             </p>
           </div>
         </div>
@@ -455,7 +458,10 @@
     </main>
     <footer class="footer outer-container bg-primary p-btm-48 p-top-48">
       <div class="max-width-container">
-        <img src="logo1.svg" class="logo logo-footer" alt="Laptap logo" />
+        <a href="#"
+          ><img src="logo1.svg" class="logo logo-footer" alt="Laptap logo"
+        /></a>
+
         <div class="footer-flex-container">
           <div class="footer-container">
             <div class="footer-contact">
