Add NPM accordion package

--- a/index.html
+++ b/index.html
@@ -369,90 +369,95 @@
         <div class="max-width-container">
           <h2 class="heading-faq">Korduma kippuvad küsimused</h2>
           <div class="flex-questions-text-container">
-            <div class="faq-questions-container">
-              <button class="faq-question">
-                <div class="faq-question-flex">
-                  <p class="faq-question-title">
-                    Kui kaua aega kulub toote transpordiks?
+            <div class="faq-questions-container accordion-container">
+              <div class="ac">
+                <button class="faq-question ac-trigger">
+                  <div class="faq-question-flex">
+                    <p class="faq-question-title ac-header">
+                      Kui kaua aega kulub toote transpordiks?
+                    </p>
+                    <img
+                      src="downarrow.svg"
+                      alt="Downarrow to open a frequently asked question."
+                      class="faq-arrow"
+                    />
+                  </div>
+                  <p class="faq-answer hidden ac-panel">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
+                    numquam ab ea libero. Cumque impedit iste consequuntur
+                    excepturi provident nihil nobis porro commodi.
                   </p>
-                  <img
-                    src="downarrow.svg"
-                    alt="Downarrow to open a frequently asked question."
-                    class="faq-arrow"
-                  />
-                </div>
-                <p class="faq-answer hidden">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
-                  numquam ab ea libero. Cumque impedit iste consequuntur
-                  excepturi provident nihil nobis porro commodi.
-                </p>
-              </button>
-
-              <button class="faq-question">
-                <div class="faq-question-flex">
-                  <p class="faq-question-title">
-                    Kui kaua aega kulub toote transpordiks?
+                </button>
+              </div>
+              <div class="ac">
+                <button class="faq-question ac-trigger">
+                  <div class="faq-question-flex">
+                    <p class="faq-question-title ac-header">
+                      Kui kaua aega kulub toote transpordiks?
+                    </p>
+                    <img
+                      src="downarrow.svg"
+                      alt="Downarrow to open a frequently asked question."
+                      class="faq-arrow"
+                    />
+                  </div>
+                  <p class="faq-answer hidden ac-panel">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
+                    numquam ab ea libero. Cumque impedit iste consequuntur
+                    excepturi provident nihil nobis porro commodi.
                   </p>
-                  <img
-                    src="downarrow.svg"
-                    alt="Downarrow to open a frequently asked question."
-                    class="faq-arrow"
-                  />
-                </div>
-                <p class="faq-answer hidden">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
-                  numquam ab ea libero. Cumque impedit iste consequuntur
-                  excepturi provident nihil nobis porro commodi.
-                </p>
-              </button>
-
-              <button class="faq-question">
-                <div class="faq-question-flex">
-                  <p class="faq-question-title">
-                    Kui kaua aega kulub toote transpordiks?
+                </button>
+              </div>
+              <div class="ac">
+                <button class="faq-question ac-trigger">
+                  <div class="faq-question-flex">
+                    <p class="faq-question-title ac-header">
+                      Kui kaua aega kulub toote transpordiks?
+                    </p>
+                    <img
+                      src="downarrow.svg"
+                      alt="Downarrow to open a frequently asked question."
+                      class="faq-arrow"
+                    />
+                  </div>
+                  <p class="faq-answer hidden ac-panel">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
+                    numquam ab ea libero. Cumque impedit iste consequuntur
+                    excepturi provident nihil nobis porro commodi.
                   </p>
-                  <img
-                    src="downarrow.svg"
-                    alt="Downarrow to open a frequently asked question."
-                    class="faq-arrow"
-                  />
-                </div>
-                <p class="faq-answer hidden">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
-                  numquam ab ea libero. Cumque impedit iste consequuntur
-                  excepturi provident nihil nobis porro commodi.
-                </p>
-              </button>
-
-              <button class="faq-question">
-                <div class="faq-question-flex">
-                  <p class="faq-question-title">
-                    Kui kaua aega kulub toote transpordiks?
+                </button>
+              </div>
+              <div class="ac">
+                <button class="faq-question ac-trigger">
+                  <div class="faq-question-flex">
+                    <p class="faq-question-title ac-header">
+                      Kui kaua aega kulub toote transpordiks?
+                    </p>
+                    <img
+                      src="downarrow.svg"
+                      alt="Downarrow to open a frequently asked question."
+                      class="faq-arrow"
+                    />
+                  </div>
+                  <p class="faq-answer hidden ac-panel">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
+                    numquam ab ea libero. Cumque impedit iste consequuntur
+                    excepturi provident nihil nobis porro commodi.
                   </p>
-                  <img
-                    src="downarrow.svg"
-                    alt="Downarrow to open a frequently asked question."
-                    class="faq-arrow"
-                  />
-                </div>
-                <p class="faq-answer hidden">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
-                  numquam ab ea libero. Cumque impedit iste consequuntur
-                  excepturi provident nihil nobis porro commodi.
-                </p>
-              </button>
+                </button>
+              </div>
             </div>
+
             <p class="faq-text">
               Kui su küsimus jääb vastuseta,
               <span class="faq-text-green"
                 >võta meiega julgelt ühendust telefonil x või emailil x.</span
               >
             </p>
-          </div>
         </div>
       </section>
     </main>
