Change invlid input message text size

--- a/index.html
+++ b/index.html
@@ -22,10 +22,28 @@
     rel="stylesheet"
     href="node_modules/@glidejs/glide/dist/css/glide.core.min.css"
   />
-    <script defer type="module" src="./dist/script.js"></script>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2abc73">
+<meta name="apple-mobile-web-app-title" content="Laptap">
+<meta name="application-name" content="Laptap">
+<meta name="msapplication-TileColor" content="#00a300">
+<meta name="theme-color" content="#ffffff">
+    <script defer type="module" src="./dist/index.js"></script>
 
     
   </head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WW93HHTRXD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WW93HHTRXD');
+</script>
   <body>
     <header class="header outer-container bg-primary">
       <div class="max-width-container">
@@ -389,10 +407,7 @@
                     />
                   </div>
                   <p class="faq-answer hidden ac-panel">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
-                    numquam ab ea libero. Cumque impedit iste consequuntur
-                    excepturi provident nihil nobis porro commodi.
+                   Transpordiaeg sõltub mitmest erinevast tegurist. Üldjuhul jõuab tellitud laud valitud postkontorisse või pakiautomaati hiljemalt 3 tööpäeva jooksul. Kui valite tellides, et tulete lauale ise Tallinna Lilleküla Gümnaasiumisse järgi, siis võetakse teiega pärast tellimust 2 tööpäeva jooksul ühendust, et täpsustada laua kättesaamise aega.
                   </p>
                 </button>
               </div>
@@ -400,7 +415,7 @@
                 <button class="faq-question ac-trigger">
                   <div class="faq-question-flex">
                     <p class="faq-question-title ac-header">
-                      Kui kaua aega kulub toote transpordiks?
+                      Kas veebilehel maksmine on ohutu?
                     </p>
                     <img
                       src="downarrow.svg"
@@ -409,10 +424,7 @@
                     />
                   </div>
                   <p class="faq-answer hidden ac-panel">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
-                    numquam ab ea libero. Cumque impedit iste consequuntur
-                    excepturi provident nihil nobis porro commodi.
+                    Loomulikult! Veebilehe maksesüsteem põhineb USA ettevõtte Stripe väljatöötatud makselahendusel, mida kasutatavad üle maailma ka sellised tehnoloogiahiiud nagu Google, Amazon ja Twilio. Seega on siin maksmine sama ohutu kui eelmainitud veebilehtedel.
                   </p>
                 </button>
               </div>
@@ -420,7 +432,7 @@
                 <button class="faq-question ac-trigger">
                   <div class="faq-question-flex">
                     <p class="faq-question-title ac-header">
-                      Kui kaua aega kulub toote transpordiks?
+                    Mis saab minu andmetest pärast tellimuse esitamist?
                     </p>
                     <img
                       src="downarrow.svg"
@@ -429,10 +441,7 @@
                     />
                   </div>
                   <p class="faq-answer hidden ac-panel">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
-                    numquam ab ea libero. Cumque impedit iste consequuntur
-                    excepturi provident nihil nobis porro commodi.
+                    Tellimust vormistades korjame teilt E-posti, telefoninumbri ning ees- ja perekonnanime, mis on vajalikud Omnivaga paki saatmiseks. Andmed hoiustatakse turvaliselt andmebaasis, kuhu on ligipääs ainult valitud õpilasfirma liikmetel. Andmeid ei jagata võõraste osapooltega, välja arvatud Omnivaga, kui valite transpordi pakiautomaati või postkontorisse.
                   </p>
                 </button>
               </div>
