--- a/checkout.html
+++ b/checkout.html
@@ -17,12 +17,18 @@
       rel="stylesheet"
     />
     <script src="https://js.stripe.com/v3/"></script>
-    <script defer src="checkout.js"></script>
+    <script defer type="module" src="./dist/checkout.js"></script>
     <link href="css/checkout-queries.css" rel="stylesheet" />
 
     <title>Checkout</title>
   </head>
   <body>
+    
+  <div class="error-msg">
+    <h2 class="error-heading"></h2>
+    <p class="error-text"></p>
+    
+  </div>
     <header class="header outer-container">
       <div class="max-width-container">
         <a class="btn-back" href="https://laptap.netlify.app#tellima"
@@ -36,11 +42,13 @@
         <section class="section-cart outer-container">
           <h2 class="heading-secondary">Ostukorv</h2>
           <article class="product-card">
-            <div class="image-container"></div>
+            <div class="image-container">
+              <img class="product-img" alt="Pilt sülearvutilauast" src="hero.webp">
+            </div>
             <div class="product-text-container">
-              <p class="product-title">Kokkuvolditav sülearvutilaud</p>
+              <p class="product-title">Sülearvutilaud</p>
               <div class="product-text-flex-container">
-                <p class="product-price">EUR 49</p>
+                <p class="product-price">EUR 39</p>
                 <select class="product-quantity">
                   <option value="1">1</option>
                   <option value="2">2</option>
@@ -57,12 +65,10 @@
           <div class="prices-container">
             <div class="product-price">
               <p class="product-price-label">Tooted</p>
-              <div class="spinner-product-price hidden">&nbsp;</div>
               <p class="product-price-value">1 x 39 = 39€</p>
             </div>
             <div class="transport-price">
               <p class="transport-price-label">Transport</p>
-              <div class="spinner-transport-price hidden">&nbsp;</div>
               <p class="transport-price-value">0€</p>
             </div>
             <div class="total-price">
