Commit before push

--- a/checkout.html
+++ b/checkout.html
@@ -48,7 +48,7 @@
             <div class="product-text-container">
               <p class="product-title">Sülearvutilaud</p>
               <div class="product-text-flex-container">
-                <p class="product-price">EUR 45</p>
+                <p class="product-card-price">EUR 40</p>
                 <select class="product-quantity">
                   <option value="1">1</option>
                   <option value="2">2</option>
@@ -71,7 +71,7 @@
             <div class="product-price">
               
               <p class="product-price-label">Tooted</p>
-              <p class="product-price-value">1 x 45 = 45€</p>
+              <p class="product-price-value">1 x 40 = 40€</p>
             </div>
             <div class="transport-price">
               <p class="transport-price-label">Transport</p>
@@ -84,7 +84,7 @@
             <div class="total-price">
               <p class="total-price-label">Hind kokku</p>
               <div class="spinner-total-price hidden">&nbsp;</div>
-              <p class="total-price-value">45€</p>
+              <p class="total-price-value">40€</p>
             </div>
             
             <button
